<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hearthstone Cards Collection</string>
    <string name="reduced_app_name">Hearthstone Cards</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_text">Create Account</string>
    <string name="logo_description">Logo</string>

    <string name="first_name_hint">Name</string>
    <string name="last_name_hint">Surname</string>
    <string name="email_hint">Email</string>
    <string name="telephone_number_hint">Telephone Number</string>

    <string name="action_profile">View profile</string>
    <string name="action_collection">Collection</string>
    <string name="action_friends">Friends</string>
    <string name="warrior_pack">Warrior Pack</string>
    <string name="priest_pack">Priest Pack</string>
    <string name="warrior_collection">Warrior Collection</string>
    <string name="priest_collection">Priest Collection</string>
    <string name="priest_icon">Priest Icon</string>
    <string name="warrior_icon">Warrior Icon</string>

    <string name="logout_menu_str">Log out</string>
    <string name="configuration_str">Download/Upload Backup</string>
    <string name="upload_backup">Upload Backup</string>
    <string name="download_backup">Download Backup</string>

    <string name="icon_selection_msg">Pick an icon</string>
    <string name="load_collection_msg">Collection loaded</string>


    <string name="card_number">Card # %1$d</string>
    <string name="rarity_common">Common</string>
    <string name="rarity_rare">Rare</string>
    <string name="rarity_epic">Epic</string>
    <string name="rarity_legendary">Legendary</string>
    <string name="rarity_prefix">Rarity: %1$s</string>


    <string name="default_web_client_id">164828669169-inrb8k8e3tfo6596e67emv2lii071f77.apps.googleusercontent.com</string>
    <string name="get_text" translatable="false">GET test</string>
    <string name="post_text" translatable="false">POST test</string>



</resources>

