<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/white">


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_clear"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_clear"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_clear"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_clear"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_clear"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/telephone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone_number_hint"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_clear"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:padding="10dp"
            android:backgroundTint="@color/purple"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</layout>