<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_description"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="70dp"/>


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_clear"
            android:textColorHint="@color/gray"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_clear"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:padding="10dp"
            android:backgroundTint="@color/dark_blueish"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:autoLink="web" />


    </LinearLayout>
</layout>