<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="es.uam.eps.dadm.hearthstonecards.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:background="@color/white"
        android:padding="16dp">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/reduced_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/configuration_str"
                android:textColor="@color/dark_blueish"
                android:textSize="20sp"
                android:gravity="center"/>
        </androidx.appcompat.widget.Toolbar>

        <!-- Back button -->
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:background="?attr/selectableItemBackground"
            android:scaleType="centerInside"
            android:src="@drawable/back_arrow" />

        <!-- Upload backup button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/upload_backup_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/upload_backup"
                android:textColor="@color/dark_blueish"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/btn_uploadFirebase"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:src="@drawable/upload_firebase"/>
        </LinearLayout>

        <!-- Download backup button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/download_backup_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/download_backup"
                android:textColor="@color/dark_blueish"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/btn_downloadFirebase"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerInside"
                android:src="@drawable/download_firebase"/>
        </LinearLayout>

    </LinearLayout>
</layout>
